--- a/package.json
+++ b/package.json
@@ -2,20 +2,23 @@
   "name": "short-lnk",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "test": "meteor test --driver-package=practicalmeteor:mocha"
   },
   "dependencies": {
     "babel-runtime": "6.18.0",
     "bcrypt": "^1.0.2",
-    "clipboard": "^1.5.16",
     "meteor-node-stubs": "~0.2.0",
     "moment": "^2.18.1",
     "prop-types": "^15.5.8",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-modal": "^1.7.7",
     "react-router": "^3.0.0",
-    "shortid": "^2.2.6",
     "simpl-schema": "0.0.3"
+  },
+  "devDependencies": {
+    "enzyme": "^2.7.1",
+    "expect": "^1.20.2",
+    "react-addons-test-utils": "^15.4.1"
   }
 }
