--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
-    "test": "meteor test --driver-package=practicalmeteor:mocha"
+    "test": "meteor test --driver-package=practicalmeteor:mocha --port=4000"
   },
   "dependencies": {
     "babel-runtime": "6.18.0",
@@ -12,6 +12,7 @@
     "moment": "^2.18.1",
     "prop-types": "^15.5.8",
     "react": "^15.4.1",
+    "react-addons-pure-render-mixin": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
     "simpl-schema": "0.0.3"
